prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/broken_slot_declaration.nut
// EXPECT_ERROR: "cannot break deref"
local t = {}
t
[0] = 1
